# Benji

./: CLAUDE.md  LICENSE  README.md  config.py  health_check.py  main.py  pyproject.toml  run_log.py  scheduler.py
.claude/: settings.json
benji/: claude.py  cli.py  config.py  imessage.py  logger.py  main.py  ollama.py  scheduler.py
benji/tasks/: example_task.py
todo/: gemma4-skills.md  self-modification.md
