[project]
name = "benji"
version = "0.1.0"
description = "A local AI orchestrator — Gemma4 for everyday tasks, Claude Code for the heavy lifting."
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
apscheduler = ">=4.0"
ollama = ">=0.4"
httpx = ">=0.27"
rich = ">=13.0"
watchdog = ">=4.0"
pyobjc-framework-Cocoa = ">=10.0"

[project.scripts]
benji = "benji.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
